<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lyrify</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="track_name">Track Name</string>
    <string name="track_artist">Track Artist</string>
    <string name="album">Album</string>
    <string name="search">Search</string>
    <string name="artist_image">artist image</string>
    <string name="lyric">Lyric</string>

</resources>
